<resources>
    <string name="app_name">AndriodCourse</string>
    <string name="test">Test Text</string>
    <string name="name_hint">Your Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="sing_up">sing up</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="skip">skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string name="facebook_app_id">786959201781212</string>
    <string name="fb_login_protocol_scheme">fb786959201781212</string>


</resources>
