<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color1"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        tools:context=".FullSignupActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view"
            android:layout_marginTop="32dp"
            android:background="@drawable/edite_text_shape"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:hint="@string/name_hint"
            android:padding="16dp"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color2" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="8dp"
            android:background="@drawable/edite_text_shape"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color2" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginTop="8dp"
            android:background="@drawable/edite_text_shape"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:hint="@string/mobile_no"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="8dp"
            android:background="@drawable/edite_text_shape"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:hint="@string/mobile_no"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color2"
            android:layout_marginBottom="32dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text"
            android:background="@drawable/button_shape"
            android:text="@string/sing_up"
            android:textColor="@color/text_color3" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:text="@string/have_an_account"
            android:textColor="@color/text_color3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/text_color3" />

    </RelativeLayout>
</ScrollView>
